[package]
name = "ledger-kusama"
description = "Library to integrate with the Ledger Kusama app"
version = "0.3.0"
license = "Apache-2.0"
authors = ["Zondax GmbH <info@zondax.ch>"]
homepage = "https://github.com/Zondax/ledger-kusama-rs"
repository = "https://github.com/Zondax/ledger-kusama-rs"
readme = "README.md"
categories  = ["authentication", "cryptography"]
keywords = ["ledger", "nano", "apdu", "polkadot", "kusama"]
edition     = "2018"
autobenches = false

[badges]
circle-ci = { repository = "zondax/ledger-kusama-rs" }

[lib]
name = "ledger_kusama"

[dependencies]
ledger = "0.2.5"
thiserror = "1.0.10"
byteorder = "1.3.4"
matches = "0.1.8"

[dev-dependencies]
ed25519-dalek ="1.0.0-pre.3"
sha2 = "0.8.1"
hex = "0.4.1"
serial_test = "0.3.2"

[profile.release]
overflow-checks = true
