[package]
name = "ledger-kusama"
description = "Library to integrate with the Ledger Kusama app"
version = "0.3.0"
license = "Apache-2.0"
authors = ["Zondax GmbH <info@zondax.ch>"]
homepage = "https://github.com/Zondax/ledger-kusama-rs"
repository = "https://github.com/Zondax/ledger-kusama-rs"
readme = "README.md"
categories  = ["authentication", "cryptography"]
keywords = ["ledger", "nano", "apdu", "polkadot", "kusama"]
edition     = "2018"
autobenches = false

[badges]
circle-ci = { repository = "zondax/ledger-kusama-rs" }

[lib]
name = "ledger_kusama"

[dependencies]
byteorder = "1.3"
lazy_static = "1.2"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

zx-bip44 = { git = "https://github.com/Zondax/blockchain-tools-rs" }
ledger-transport = { git = "https://github.com/Zondax/ledger-rs", branch="feature/upgradehid" }
ledger-transport-hid = { git = "https://github.com/Zondax/ledger-rs", branch="feature/upgradehid" }

[dev-dependencies]
futures = "0.3"
matches = "0.1"
ed25519-dalek ="1.0.0-pre.3"
sha2 = "0.8"
blake2b_simd = "0.5"
hex = "0.4"
serial_test = "0.3"
env_logger = "0.7"
futures-await-test = "0.3"

[profile.release]
overflow-checks = true
