[package]
name = "ledger-substrate"
description = "Library to integrate with the Ledger Substrate apps"
version = "0.8.0"
license = "Apache-2.0"
authors = ["Zondax GmbH <info@zondax.ch>"]
homepage = "https://github.com/Zondax/ledger-substrate-rs"
repository = "https://github.com/Zondax/ledger-substrate-rs"
readme = "README.md"
categories  = ["authentication", "cryptography"]
keywords = ["ledger", "nano", "apdu", "polkadot", "kusama", "substrate"]
edition     = "2018"
autobenches = false

[badges]
circle-ci = { repository = "zondax/ledger-substrate-rs" }

[lib]
name = "ledger_substrate"

[dependencies]
byteorder = "1.3"
lazy_static = "1.2"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
log = "0.4.8"

zx-bip44 = { git = "https://github.com/Zondax/blockchain-tools-rs" }
ledger-zondax-generic = { git = "https://github.com/Zondax/ledger-rs" }
ledger-transport = { git = "https://github.com/Zondax/ledger-rs" }
ledger-transport-hid = { git = "https://github.com/Zondax/ledger-rs" }
ed25519-dalek ="1.0.0-pre.4"
blake2b_simd = "0.5"

[dev-dependencies]
futures = "0.3"
matches = "0.1"
sha2 = "0.8"
hex = "0.4"
serial_test = "0.3"
env_logger = "0.7"
futures-await-test = "0.3"

[profile.release]
overflow-checks = true
